# vs-code-aster

./: .gitignore  .prettierignore  .prettierrc  .vscodeignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  eslint.config.mjs  language-configuration.json  noxfile.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: ci.yml
.husky/: pre-commit
examples/: lsp_showcase.comm
python/: med2obj.py
python/cmake/: CMakeLists.txt  FindCoverage.cmake  FindProtobuf.cmake  FindPyQt5.cmake  FindSphinx.cmake  UseProtobuf.cmake  UsePython.cmake  UseQt.cmake  UseSphinx.cmake
python/data/: tezzz.comm  zzzz289a.comm
python/lsp/: __init__.py  command_core.py  command_registry.py  handlers.py  managers_container.py  server.py  validators.py
resources/export_form/: export.css  export.html  export.js
resources/visu_vtk/: index.html  index.js  styles.css  tailwind.css  vite.config.ts
src/: CatalogResolver.ts  CaveStatusBar.ts  CommFormatter.ts  ExportEditor.ts  ExportFormatter.ts  LspServer.ts  MedAutoDetect.ts  MedEditorProvider.ts  MedLanguageSync.ts  MessFileParser.ts  OutputParser.ts  PythonEnv.ts  RunAster.ts  SetupOnboarding.ts  SidebarView.ts  StatusBar.ts  VisuManager.ts  WebviewVisu.ts  extension.ts  projectPaths.ts  telemetry.ts  utils.ts
syntaxes/: comm.tmLanguage.json  export.tmLanguage.json
vscode-webview-dialog/: package.json
vscode-webview-dialog/src/: webviewDialog.ts
vscode-webview-dialog/test/: dialog.css  dialog.html  dialog.js  extension.ts
(+511 files in other folders)
